	PR c/29467 	* c-decl.c (declspecs_add_type): Pedwarn if boolean types are used 	in C89 mode.

* gcc.dg/pr29467.c: New test.
	* gcc.dg/declspec-13.c: Renumber some dg-warnings.  Add dg-warnings
	about boolean types.
	* gfortran.dg/bind_c_usage_24_c.c: Include <stdbool.h>.  Change _Bool
	to bool.
	* gfortran.dg/c_f_pointer_logical_driver.c: Change _Bool to bool.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@209971 138bc75d-0d04-0410-961f-82ee72b054a4