gcc/testsuite/gcc.dg/declspec-13.c
@@ -36,43 +36,53 @@ long double long x3; /* { dg-error "both 'long long' and 'double' in declaration
 short long x4; /* { dg-error "both 'long' and 'short' in declaration specifiers" } */
 void long x5; /* { dg-error "both 'long' and 'void' in declaration specifiers" } */
 _Bool long x6; /* { dg-error "both 'long' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 38 } */
 char long x7; /* { dg-error "both 'long' and 'char' in declaration specifiers" } */
 float long x8; /* { dg-error "both 'long' and 'float' in declaration specifiers" } */
 long short x9; /* { dg-error "both 'long' and 'short' in declaration specifiers" } */
 void short x10; /* { dg-error "both 'short' and 'void' in declaration specifiers" } */
 _Bool short x11; /* { dg-error "both 'short' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 44 } */
 char short x12; /* { dg-error "both 'short' and 'char' in declaration specifiers" } */
 float short x13; /* { dg-error "both 'short' and 'float' in declaration specifiers" } */
 double short x14; /* { dg-error "both 'short' and 'double' in declaration specifiers" } */
 unsigned signed x15; /* { dg-error "both 'signed' and 'unsigned' in declaration specifiers" } */
 void signed x16; /* { dg-error "both 'signed' and 'void' in declaration specifiers" } */
 _Bool signed x17; /* { dg-error "both 'signed' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 51 } */
 float signed x18; /* { dg-error "both 'signed' and 'float' in declaration specifiers" } */
 double signed x19; /* { dg-error "both 'signed' and 'double' in declaration specifiers" } */
 signed unsigned x20; /* { dg-error "both 'signed' and 'unsigned' in declaration specifiers" } */
 void unsigned x21; /* { dg-error "both 'unsigned' and 'void' in declaration specifiers" } */
 _Bool unsigned x22; /* { dg-error "both 'unsigned' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 57 } */
 float unsigned x23; /* { dg-error "both 'unsigned' and 'float' in declaration specifiers" } */
 double unsigned x24; /* { dg-error "both 'unsigned' and 'double' in declaration specifiers" } */
 void _Complex x25; /* { dg-error "both 'complex' and 'void' in declaration specifiers" } */
-/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 57 } */
+/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 61 } */
 _Bool _Complex x26; /* { dg-error "both 'complex' and '_Bool' in declaration specifiers" } */
-/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 59 } */
+/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 63 } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 63 } */
 
 long void x27; /* { dg-error "both 'long' and 'void' in declaration specifiers" } */
 short void x28; /* { dg-error "both 'short' and 'void' in declaration specifiers" } */
 signed void x29; /* { dg-error "both 'signed' and 'void' in declaration specifiers" } */
 unsigned void x30; /* { dg-error "both 'unsigned' and 'void' in declaration specifiers" } */
 _Complex void x31; /* { dg-error "both 'complex' and 'void' in declaration specifiers" } */
-/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 66 } */
-/* { dg-warning "ISO C does not support plain 'complex' meaning 'double complex'" "complex" { target *-*-* } 66 } */
+/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 71 } */
+/* { dg-warning "ISO C does not support plain 'complex' meaning 'double complex'" "complex" { target *-*-* } 71 } */
 long _Bool x32; /* { dg-error "both 'long' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 74 } */
 short _Bool x33; /* { dg-error "both 'short' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 76 } */
 signed _Bool x34; /* { dg-error "both 'signed' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 78 } */
 unsigned _Bool x35; /* { dg-error "both 'unsigned' and '_Bool' in declaration specifiers" } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 80 } */
 _Complex _Bool x36; /* { dg-error "both 'complex' and '_Bool' in declaration specifiers" } */
-/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 73 } */
-/* { dg-warning "ISO C does not support plain 'complex' meaning 'double complex'" "complex" { target *-*-* } 73 } */
+/* { dg-warning "ISO C90 does not support complex types" "C90" { target *-*-* } 82 } */
+/* { dg-warning "ISO C90 does not support boolean types" "C90" { target *-*-* } 82 } */
+/* { dg-warning "ISO C does not support plain 'complex' meaning 'double complex'" "complex" { target *-*-* } 82 } */
 long char x37; /* { dg-error "both 'long' and 'char' in declaration specifiers" } */
 short char x38; /* { dg-error "both 'short' and 'char' in declaration specifiers" } */
 long float x39; /* { dg-error "both 'long' and 'float' in declaration specifiers" } */
@@ -80,7 +90,7 @@ short float x40; /* { dg-error "both 'short' and 'float' in declaration specifie
 signed float x41; /* { dg-error "both 'signed' and 'float' in declaration specifiers" } */
 unsigned float x42; /* { dg-error "both 'unsigned' and 'float' in declaration specifiers" } */
 long long double x43; /* { dg-error "both 'long long' and 'double' in declaration specifiers" } */
-/* { dg-warning "ISO C90 does not support 'long long'" "C90" { target *-*-* } 82 } */
+/* { dg-warning "ISO C90 does not support 'long long'" "C90" { target *-*-* } 92 } */
 short double x44; /* { dg-error "both 'short' and 'double' in declaration specifiers" } */
 signed double x45; /* { dg-error "both 'signed' and 'double' in declaration specifiers" } */
 unsigned double x46; /* { dg-error "both 'unsigned' and 'double' in declaration specifiers" } */
